--- a/reactapp/src/components/admin/sidebar.scss
+++ b/reactapp/src/components/admin/sidebar.scss
@@ -79,7 +79,21 @@
  body {
    position: relative;
  }
+ .pro-sidebar-layout::after{
+  scroll-behavior: smooth!important;
+ }
+.pro-sidebar-layout::-webkit-scrollbar{
+  width: 8px;
 
+}
+.pro-sidebar-layout::-webkit-scrollbar-thumb{
+  background-image: linear-gradient(to bottom, #30ffd6,#fc4e8b);
+  border-radius: 100rem;
+}
+.pro-sidebar-layout::-webkit-scrollbar-track{
+  background-color: white;
+  background-origin: 100rem;
+}
 // .admin-sidebar {
 //   //  height: auto;
   
