fixed Voucher and SideBar

--- a/reactapp/src/components/khuyenMai/KhuyenMai.scss
+++ b/reactapp/src/components/khuyenMai/KhuyenMai.scss
@@ -13,5 +13,10 @@
     height: 32px;
     text-align: left;
     margin-bottom: 5px;
-    min-width: 139px;
+}
+
+#bang{
+    thead{
+        background-color: #fadb14;
+    }
 }
