--- a/reactapp/src/components/hoaDon/HoaDonDetail.scss
+++ b/reactapp/src/components/hoaDon/HoaDonDetail.scss
@@ -48,13 +48,13 @@
 
 //     left: 0 !important;
 // }
-// .TimelineEvent-container- {
-//     svg {
-//         width: 215px;
-//     }
-// }
+.TimelineEvent-container- {
+    svg {
+        width: 215px;
+    }
+}
 
-// .TimelineEvent-icon- {
+.TimelineEvent-icon- {
 
-//     left: 0 !important;
-// }
+    left: 0 !important;
+}
