--- a/reactapp/src/components/admin/admin.scss
+++ b/reactapp/src/components/admin/admin.scss
@@ -7,11 +7,11 @@
     }
     .admin-contents{
         flex:100%;
-        background-color: #e6e8e7;
+        background-color: #fefffe;
         flex-direction: column; 
     }
     .admin-content{
-        background-color: #e6e8e7;
+        background-color: #fbfbfb;
     }
 }
 .admin-header{
