--- a/reactapp/src/components/hoaDon/HoaDon.scss
+++ b/reactapp/src/components/hoaDon/HoaDon.scss
@@ -1,5 +1,5 @@
 .ant-table .ant-table-container .ant-table-content table thead.ant-table-thead .ant-table-cell {
-    background-color: orangered;
+    background-color: #d0aa73;
 }
 .a.btn:hover{
     background-color: orangered;
